# Shell-Texturing

./: .gitattributes  CMakeLists.txt  README.md  compile_commands.json
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: buffer.cpp  buffer.h  camera.cpp  camera.h  fragment_shader.glsl  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  vertex_shader.glsl
